--- a/Style.css
+++ b/Style.css
@@ -1,59 +1,65 @@
+<!DOCTYPE HTML>
+<html lang="pt br">
+	<head>
 		<style>
-			#Titulo{
-				font-weight: bold;
-				font-size: 14px;
-				text-align: center;
-		}
-			a{
-				
-		}
-
-			img{
-				margin-left: 600px;
-				height: 350px;
-				weight: 250px;
-				animation-duration: 7s;
-				animation-name: BG;
-		}
-			@keyframes BG {
-				from {
-					margin-left: 100%;
-					width: 300%;
-		}
-
-				to {
-					margin-left: 0%;
-					width: 100%;
-		}
-		}
-			@keyframes BG {
-				from {
-					margin-left: 100%;
-					width: 270%;
-		}
-
-				to {
-					margin-left: 0%;
-					width: 100%;
-		}
-		}
-			#materia{
-				font-weight: bold;
-				font-size: 14px;
-				text-align: center;
-				color: red;
-		}
-			#imagemdev{
-				height: 350px;
-				weight: 300px;
-		}
-			#desenvolvedores{
-				background-color: blue;
-				color: white;
-		}
-			footer{
-				font-size: 12px;
-				text-align: center;
-		}
-
+				#Titulo{
+					font-weight: bold;
+					font-size: 14px;
+					text-align: center;
+			}
+				a{
+					
+			}
+	
+				img{
+					margin-left: 600px;
+					height: 350px;
+					weight: 250px;
+					animation-duration: 7s;
+					animation-name: BG;
+			}
+				@keyframes BG {
+					from {
+						margin-left: 100%;
+						width: 300%;
+			}
+	
+					to {
+						margin-left: 0%;
+						width: 100%;
+			}
+			}
+				@keyframes BG {
+					from {
+						margin-left: 100%;
+						width: 270%;
+			}
+	
+					to {
+						margin-left: 0%;
+						width: 100%;
+			}
+			}
+				#materia{
+					font-weight: bold;
+					font-size: 14px;
+					text-align: center;
+					color: red;
+			}
+				#imagemdev{
+					height: 350px;
+					weight: 300px;
+			}
+				#desenvolvedores{
+					background-color: blue;
+					color: white;
+			}
+				footer{
+					font-size: 12px;
+					text-align: center;
+			}
 		</style>
+	</head>
+	<body>
+	</body>
+</html>
