--- a/Style.css
+++ b/Style.css
@@ -29,6 +29,7 @@
 				#desenvolvedores{
 					background-color: blue;
 					color: white;
+					font-style: italic;
 			}
 				footer{
 					font-size: 12px;
